--- a/server/App.xaml
+++ b/server/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="server.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:server"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:server">
     <Application.Resources>
          
     </Application.Resources>
